# doctorWhoBot

./: Cargo.toml  README.md  episodes.json  quotes.json  trivia.json
src/: commands.rs  data_structs.rs  handlers.rs  main.rs  misc.rs
