[package]
name = "doctorwho_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6.1"
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.33", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
futures = "0.3"
dotenv = "0.15"